--- a/ios-app-demo1/Base.lproj/Main.storyboard
+++ b/ios-app-demo1/Base.lproj/Main.storyboard
@@ -16,26 +16,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugn-wI-VFf">
-                                <rect key="frame" x="115" y="80" width="184" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugn-wI-VFf">
+                                <rect key="frame" x="115" y="64" width="184" height="30"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="File"/>
                             </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZe-qa-VZV">
-                                <rect key="frame" x="115" y="157" width="184" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZe-qa-VZV">
+                                <rect key="frame" x="115" y="114" width="184" height="30"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Net"/>
                             </button>
-                            <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1S-mM-XAF">
-                                <rect key="frame" x="115" y="228" width="184" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1S-mM-XAF">
+                                <rect key="frame" x="115" y="164" width="184" height="30"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="NavigationControllerDemo"/>
                             </button>
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Kn-9h-U1g">
+                                <rect key="frame" x="115" y="214" width="184" height="30"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="pcm"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0Kn-9h-U1g" secondAttribute="trailing" constant="115" id="2NN-ul-CC0"/>
+                            <constraint firstItem="ugn-wI-VFf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="3yv-RJ-5ji"/>
+                            <constraint firstItem="b1S-mM-XAF" firstAttribute="top" secondItem="JZe-qa-VZV" secondAttribute="bottom" constant="20" id="4Uy-0F-wEs"/>
+                            <constraint firstItem="JZe-qa-VZV" firstAttribute="top" secondItem="ugn-wI-VFf" secondAttribute="bottom" constant="20" id="D7J-jn-Bk6"/>
+                            <constraint firstItem="JZe-qa-VZV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="DZK-Od-y4o"/>
+                            <constraint firstItem="b1S-mM-XAF" firstAttribute="top" secondItem="JZe-qa-VZV" secondAttribute="bottom" constant="20" id="PUf-Bp-ONM"/>
+                            <constraint firstItem="b1S-mM-XAF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="SwH-Tn-iXz"/>
+                            <constraint firstItem="0Kn-9h-U1g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="TZh-fF-P4B"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="b1S-mM-XAF" secondAttribute="trailing" constant="115" id="U1t-be-4Vg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JZe-qa-VZV" secondAttribute="trailing" constant="115" id="XNc-wM-Shs"/>
+                            <constraint firstItem="0Kn-9h-U1g" firstAttribute="top" secondItem="b1S-mM-XAF" secondAttribute="bottom" constant="20" id="i3Q-oZ-lbX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ugn-wI-VFf" secondAttribute="trailing" constant="115" id="tnV-03-tqt"/>
+                            <constraint firstItem="ugn-wI-VFf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="vYz-Ga-nMm"/>
+                            <constraint firstItem="JZe-qa-VZV" firstAttribute="top" secondItem="ugn-wI-VFf" secondAttribute="bottom" constant="20" id="zqx-PE-GcG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
