--- a/ios-app-demo1/Base.lproj/Main.storyboard
+++ b/ios-app-demo1/Base.lproj/Main.storyboard
@@ -36,6 +36,11 @@
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="pcm"/>
                             </button>
+                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Rp-7P-sXu">
+                                <rect key="frame" x="115" y="264" width="184" height="30"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="OpenGL"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -49,6 +54,9 @@
                             <constraint firstItem="0Kn-9h-U1g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="TZh-fF-P4B"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="b1S-mM-XAF" secondAttribute="trailing" constant="115" id="U1t-be-4Vg"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JZe-qa-VZV" secondAttribute="trailing" constant="115" id="XNc-wM-Shs"/>
+                            <constraint firstItem="5Rp-7P-sXu" firstAttribute="top" secondItem="0Kn-9h-U1g" secondAttribute="bottom" constant="20" id="awn-Fn-x2g"/>
+                            <constraint firstItem="5Rp-7P-sXu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="e7W-bT-6fE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Rp-7P-sXu" secondAttribute="trailing" constant="115" id="hZk-Iy-5O3"/>
                             <constraint firstItem="0Kn-9h-U1g" firstAttribute="top" secondItem="b1S-mM-XAF" secondAttribute="bottom" constant="20" id="i3Q-oZ-lbX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ugn-wI-VFf" secondAttribute="trailing" constant="115" id="tnV-03-tqt"/>
                             <constraint firstItem="ugn-wI-VFf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="vYz-Ga-nMm"/>
